# Discrete-Optimization-In-Python

./: .gitignore  .pre-commit-config.yaml  01-Introduction.ipynb  02-Fourier-Motzkin-Elimination.ipynb  03-Affine-Mappings-and-Polar-Cones.ipynb  04-Interior-Exterior-Representations.ipynb  05-The-Integer-Hull.ipynb  06-Branch-And-Bound.ipynb  07-Unimodularity-and-Total-Dual-Integrality.ipynb  08-Fractional-and-Mixed-Integer-Gomory-Cuts.ipynb  09-The-Knapsack-Problem.ipynb  10-The-Set-Packing-Polytope.ipynb  11-Lagrange-Relaxation.ipynb  12-Dantzig-Wolfe-Decomposition.ipynb  13-Benders-Decomposition.ipynb  14-Heuristic-Methods.ipynb  15-Other-Heuristics.ipynb  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: _config.yml  _toc.yml  index.md
notebooks/: .txt_results.txt  01-Introduction.ipynb  02-Fourier-Motzkin-Elimination.ipynb  03-Affine-Mappings-and-Polar-Cones.ipynb  04-Interior-Exterior-Representations.ipynb  07-Unimodularity-and-Total-Dual-Integrality.ipynb  09-The-Knapsack-Problem.ipynb  10-The-Set-Packing-Polytope.ipynb  11-Lagrange-Relaxation.ipynb  12-Dantzig-Wolfe-Decomposition.ipynb  13-Benders-Decomposition.ipynb  14-Heuristic-Methods.ipynb  fme_ex_polyhedron.txt  fme_ex_polyhedron_results.txt
src/: __init__.py
src/polyhedra/: affine.py  fourier_motzkin.py  polar.py
src/visualization/: visualize_polyhedra.py
tests/: test_visualisation.py
